--- a/윤지성/assets/css/style.css
+++ b/윤지성/assets/css/style.css
@@ -72,6 +72,7 @@
     height: calc(100% - 60px);
     border-radius: 10px 10px 0 0;
     padding: 5%;
+    overflow-y: scroll;
 }
 
 .layer__footer {
@@ -88,6 +89,96 @@
     border-radius: 0 0 10px 10px;
 }
 
+
+/* youtube */
+.youtube h3 {
+    margin-bottom: 5px;
+    font-size: 25px;
+}
+.youtube .small {
+    font-size: 16px;
+}
+
+.youtube .mail {
+    display: block;
+    font-size: 12px;
+    margin-top: 30px;
+    position: relative;
+    color: #c9c9c9
+}
+
+.youtube .mail::before {
+    content: '';
+    width: 50px;
+    height: 1px;
+    background-color: #fff;
+    position: absolute;
+    left: 0;
+    top: -16px;
+}
+.youtube .info {
+    display: flex;
+    align-items: center;
+    position: relative;
+    margin-top: 40px;
+}
+
+.youtube .info::after {
+    content: '';
+    width: 1px;
+    height: 13px;
+    background-color: #78828a44;
+    position: absolute;
+    left: 235px;
+    top: 17px;
+}
+
+.youtube .info li {
+    display: inline-block;
+    color: #78828A;
+    padding: 5px 10px;
+}
+
+.youtube .info li:first-child {
+    color: #bcbdbe;
+}
+
+.youtube .info input {
+    border: 1px solid rgba(173, 166, 207, 0.671);
+    background-color: #78828a0a;
+    backdrop-filter: blur(20px);
+    padding: 10px 16px;
+    border-radius: 100px;
+    outline: none;
+    color: #fff;
+    margin-right: 36px;
+}
+
+.youtube .view {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 30px;
+    justify-content: space-between;
+    overflow-y: scroll;
+}
+.youtube .view > div {
+    width: 32.333%;
+    margin-bottom: 2%;
+} 
+.youtube .view > div .img {
+    width: 100%;
+    padding-bottom: 56.25%;
+   
+}
+.youtube .view > div .img {
+    background-image: url(https://i.ytimg.com/vi/lkIFF4maKMU/hqdefault.jpg);
+    background-position: center center;
+    background-size: cover;
+}
+.youtube .view > div .title {
+    background-color: #ffffff23;
+    padding: 5px 10px;
+}
 
 /* layout - about */
 .about h3 {
