--- a/강서현/assets/css/style.css
+++ b/강서현/assets/css/style.css
@@ -293,3 +293,33 @@
     font-size: 4vw;
 
 }
+
+
+
+#section5 {
+    background-color: #fff;
+    height: 100vh;
+    border-radius: 100px 100px 0 0;
+}
+
+.sec5-text {
+    font-family: 'GmarketSans';
+    font-size: 11vw;
+    padding: 10% 20px;
+    font-weight: 800;
+    line-height: 0.9;
+    text-transform: uppercase;
+    
+}
+.sec5-text > div {
+    display: inline-block;
+    position: relative;
+}
+.sec5-text span {
+    font-size: 24px;
+    font-weight: 2;
+    line-height: 1.3;
+    position: absolute;
+    right: -90px;
+    top: 0;
+}
