--- a/윤영식/assets/css/style.css
+++ b/윤영식/assets/css/style.css
@@ -158,7 +158,7 @@ body {
     font-family: 'GmarketSans';
     border-right: 1px solid #ffffff26;
     display: block;
-    width: 800px;
+    width: 700px;
     height: 100vh;
     padding-left: 5vw;
     padding-top: 2vw;
@@ -189,10 +189,23 @@ body {
     opacity: 0.5;
 }
 
+#section3 .desc-wrap>.desc h6 {
+    font-size: 16px;
+    font-family: 'GmarketSans';
+    text-decoration: underline;
+    text-underline-position: under;
+    margin-bottom: 10px;
+
+}
+
 #section3 .desc-wrap>.desc p {
     font-family: 'AritaBuri';
 }
 
+
+#section3 .desc-wrap>.desc .top {
+    margin-top: 30px;
+}
 
 
 #section3 .desc-wrap>.desc.d1 {}
@@ -227,4 +240,78 @@ body {
     color: #fff;
     font-family: 'AritaBuri';
     line-height: 1.5;
+}
+
+
+.code code {
+    font-family: "nanumSquareNeo";
+}
+
+.code pre {
+    background-color: #000;
+    color: #fff;
+}
+
+.code .hljs {
+    background: transparent;
+}
+
+.hljs-punctuation,
+.hljs-tag {
+    color: #fff !important;
+}
+
+
+.commnet-wrap {
+    height: 100vh;
+    overflow-y: scroll;
+}
+
+.commnet-wrap .comment {
+    max-width: 400px;
+    margin-top: 20px;
+    overflow: hidden;
+}
+
+.commnet-wrap .comment p {
+    background: #00000085;
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 5px;
+    line-height: 1.6;
+}
+
+.commnet-wrap .comment span {
+    font-size: 14px;
+    color: #979797;
+    float: right;
+}
+
+.comment-write {
+    max-width: 400px;
+    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.comment-write input {
+    background: transparent;
+    border: 0;
+    border-bottom: 1px solid #ffffff4b;
+    padding: 10px;
+    margin-bottom: 5px;
+    color: #fff;
+}
+
+.comment-write input:nth-child(1) {
+    width: 49.5%;
+    margin-right: 1%;
+}
+
+.comment-write input:nth-child(2) {
+    width: 49.5%;
+}
+
+.comment-write input:nth-child(3) {
+    width: 100%;
 }
