--- a/윤지성/assets/css/style.css
+++ b/윤지성/assets/css/style.css
@@ -186,6 +186,63 @@
     padding: 5px 10px;
 }
 
+
+.layer.react {}
+
+.layer.react .layer__contents h3 {
+    margin-bottom: 5px;
+    font-size: 25px;
+}
+
+.layer.react .layer__contents h4 {
+    margin-bottom: 10px;
+    font-size: 26px;
+    margin-top: 20px;
+}
+
+.layer.react .layer__contents p {
+    margin-bottom: 10px;
+}
+
+.layer.react .layer__contents .mail {
+    display: block;
+    font-size: 12px;
+    margin-top: 30px;
+    position: relative;
+    color: #c9c9c9
+}
+
+.layer.react .layer__contents .mail::before {
+    content: '';
+    width: 50px;
+    height: 1px;
+    background-color: #fff;
+    position: absolute;
+    left: 0;
+    top: -16px;
+}
+
+.layer.react .layer__contents .img {
+    overflow: hidden;
+    padding: 10px;
+    background-color: #00000049;
+    margin-bottom: 20px;
+}
+
+.layer.react .layer__footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.layer.react .layer__footer span {
+    display: inline-block;
+    background-color: #fff;
+    color: #000;
+    padding: 1px 20px;
+    border-radius: 40px;
+}
+
+
 /* layout - about */
 .about h3 {
     margin-bottom: 5px;
@@ -271,6 +328,81 @@
 }
 
 .wallpapers .movieIcon span {
+    display: block;
+    font-size: 12px;
+    color: #fff;
+    margin-top: 10px;
+    font-family: "nanumSquareNeo";
+}
+
+.wallpapers .reactIcon {
+    width: 75px;
+    height: 75px;
+    position: absolute;
+    right: 20px;
+    top: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.wallpapers .reactIcon img {
+    width: 40px;
+}
+
+.wallpapers .reactIcon span {
+    display: block;
+    font-size: 12px;
+    color: #fff;
+    margin-top: 10px;
+    font-family: "nanumSquareNeo";
+}
+
+.wallpapers .vueIcon {
+    width: 75px;
+    height: 75px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.wallpapers .vueIcon img {
+    width: 40px;
+}
+
+.wallpapers .vueIcon span {
+    display: block;
+    font-size: 12px;
+    color: #fff;
+    margin-top: 10px;
+    font-family: "nanumSquareNeo";
+}
+
+.wallpapers .viteIcon {
+    width: 75px;
+    height: 75px;
+    position: absolute;
+    right: 20px;
+    top: 220px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.wallpapers .viteIcon img {
+    width: 40px;
+}
+
+.wallpapers .viteIcon span {
     display: block;
     font-size: 12px;
     color: #fff;
