--- a/권초록/assets/css/reset.css
+++ b/권초록/assets/css/reset.css
@@ -1,27 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100;200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
 
 @font-face {
-    font-family: "Saint Monica";
-    src: url("https://yuram2.github.io/webs_class/portfolio/font/SaintMonicaItalic.eot");
-    src: url("https://yuram2.github.io/webs_class/portfolio/font/SaintMonicaItalic.eot?#iefix") format("embedded-opentype"),
-        url("https://yuram2.github.io/webs_class/portfolio/font/SaintMonicaItalic.woff2") format("woff2"),
-        url("https://yuram2.github.io/webs_class/portfolio/font/SaintMonicaItalic.woff") format("woff"),
-        url("https://yuram2.github.io/webs_class/portfolio/font/SaintMonicaItalic.svg#SaintMonicaItalic") format("svg");
+    font-family: 'AVGARDD';
+    font-style: normal;
     font-weight: normal;
-    font-style: italic;
-    font-display: swap;
+    src: url('../fonts/AVGARDD_2.woff') format('woff');
 }
 
 @font-face {
-    font-family: "Saint Monica";
-    src: url("https://yuram2.github.io/webs_class/portfolio/font/SaintMonicaRegular.eot");
-    src: url("https://yuram2.github.io/webs_class/portfolio/font/SaintMonicaRegular.eot?#iefix") format("embedded-opentype"),
-        url("https://yuram2.github.io/webs_class/portfolio/font/SaintMonicaRegular.woff2") format("woff2"),
-        url("https://yuram2.github.io/webs_class/portfolio/font/SaintMonicaRegular.woff") format("woff"),
-        url("https://yuram2.github.io/webs_class/portfolio/font/SaintMonicaRegular.svg#SaintMonicaRegular") format("svg");
-    font-weight: normal;
+    font-family: 'AVGARDN';
     font-style: normal;
-    font-display: swap;
+    font-weight: normal;
+    src: url('../fonts/AVGARDN_2.woff') format('woff');
 }
 
 @font-face {
@@ -78,55 +68,59 @@
     font-style: normal;
     src: url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Light.eot");
     src: url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Light.eot?#iefix") format("embedded-opentype"),
-         url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Light.woff2") format("woff2"),
-         url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Light.woff") format("woff"),
-         url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Light.ttf") format("truetype");
+        url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Light.woff2") format("woff2"),
+        url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Light.woff") format("woff"),
+        url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Light.ttf") format("truetype");
     font-display: swap;
-} 
+}
+
 @font-face {
     font-family: "nanumSquareNeo";
     font-weight: 400;
     font-style: normal;
     src: url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Regular.eot");
     src: url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Regular.eot?#iefix") format("embedded-opentype"),
-         url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Regular.woff2") format("woff2"),
-         url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Regular.woff") format("woff"),
-         url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Regular.ttf") format("truetype");
+        url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Regular.woff2") format("woff2"),
+        url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Regular.woff") format("woff"),
+        url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Regular.ttf") format("truetype");
     font-display: swap;
-} 
+}
+
 @font-face {
     font-family: "nanumSquareNeo";
     font-weight: 700;
     font-style: normal;
     src: url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Bold.eot");
     src: url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Bold.eot?#iefix") format("embedded-opentype"),
-         url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Bold.woff2") format("woff2"),
-         url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Bold.woff") format("woff"),
-         url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Bold.ttf") format("truetype");
+        url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Bold.woff2") format("woff2"),
+        url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Bold.woff") format("woff"),
+        url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Bold.ttf") format("truetype");
     font-display: swap;
-} 
+}
+
 @font-face {
     font-family: "nanumSquareNeo";
     font-weight: 800;
     font-style: normal;
     src: url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-ExtraBold.eot");
     src: url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-ExtraBold.eot?#iefix") format("embedded-opentype"),
-         url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-ExtraBold.woff2") format("woff2"),
-         url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-ExtraBold.woff") format("woff"),
-         url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-ExtraBold.ttf") format("truetype");
+        url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-ExtraBold.woff2") format("woff2"),
+        url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-ExtraBold.woff") format("woff"),
+        url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-ExtraBold.ttf") format("truetype");
     font-display: swap;
-} 
+}
+
 @font-face {
     font-family: "nanumSquareNeo";
     font-weight: 900;
     font-style: normal;
     src: url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Black.eot");
     src: url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Black.eot?#iefix") format("embedded-opentype"),
-         url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Black.woff2") format("woff2"),
-         url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Black.woff") format("woff"),
-         url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Black.ttf") format("truetype");
+        url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Black.woff2") format("woff2"),
+        url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Black.woff") format("woff"),
+        url("https://cdn.jsdelivr.net/gh/websfont/nanumSquareNeo/nanumSquareNeo-Black.ttf") format("truetype");
     font-display: swap;
-} 
+}
 
 /* border-box 초기화 */
 *,
