--- a/권초록/assets/css/style3.css
+++ b/권초록/assets/css/style3.css
@@ -92,6 +92,14 @@
     color: var(--main-color);
 }
 
+.sec4__inner span {
+    color: var(--main-color);
+}
+
+.sec5__inner span {
+    color: var(--main-color);
+}
+
 .sec1__inner .small {
     font-size: 20px;
     font-weight: 200;
@@ -104,11 +112,12 @@
 
 /* section2 */
 #section2 {
-    height: 3000px;
-    background-color: #111;
+    background: linear-gradient(180deg, #00000000 0%, #000000 10%, #000 100%);
+    background: #000;
     position: relative;
     z-index: 1000;
     margin-top: 100vh;
+    padding: 10% 0;
 }
 
 #section2 h3 {
@@ -118,8 +127,8 @@
     margin-bottom: 3%;
     letter-spacing: .51vw;
     text-transform: uppercase;
-    opacity: 0.5;
-    padding: 10% 5% 0;
+    opacity: 0.8;
+    padding: 0 5%;
 }
 
 #section2 .sec2__inner {
@@ -135,6 +144,7 @@
     font-weight: 500;
     padding-top: 8px;
     opacity: 0;
+    margin-left: -5px;
 }
 
 #section2 .sec2__inner .sec2__text {
@@ -144,14 +154,13 @@
     line-height: 1.4;
     font-weight: 700;
     opacity: 1;
+    margin-left: -5px;
 }
 
 #section2 .sec2__img {
     overflow: hidden;
     width: 100%;
 }
-
-#section2 .sec2__img .mask {}
 
 #section2 .sec2__img .img {
     display: flex;
@@ -180,4 +189,216 @@
 
 #section2 .sec2__img .img>div:nth-child(3) {
     background-image: url(https://images.unsplash.com/photo-1682686581220-689c34afb6ef?q=80&w=3540&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+}
+
+
+/* section3 */
+#section3 {
+    position: relative;
+    z-index: 1000;
+    background-color: #000;
+    color: #fff;
+    padding: 10% 0 15%;
+}
+
+#section3 h3 {
+    font-size: 16px;
+    font-family: 'Abel';
+    color: #A3957F;
+    margin-bottom: 3%;
+    letter-spacing: .51vw;
+    text-transform: uppercase;
+    opacity: 0.8;
+    padding: 0 5%;
+}
+
+.sec3__inner ul {
+    border-top: 1px solid #a3957f61;
+}
+
+.sec3__inner li {
+    border-bottom: 1px solid #a3957f61;
+    color: #A3957F;
+    font-family: 'GmarketSans';
+    font-weight: bold;
+    font-size: 7vw;
+    line-height: 0.91;
+    text-transform: uppercase;
+    padding-left: 5%;
+    padding-top: .4vw;
+    overflow: hidden;
+}
+
+.sec3__inner li.active {
+    background-color: #73dc3b;
+    color: #000;
+    display: flex;
+    align-items: center;
+}
+
+.sec3__inner li.active em {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    padding-left: 40px;
+}
+
+
+
+
+/* section4 */
+#section4 {
+    background: #000;
+    position: relative;
+    z-index: 1000;
+    padding: 10% 0;
+    background-image: url(https://images.unsplash.com/photo-1682685797406-97f364419b4a?q=80&w=3540&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-position: center center;
+    background-attachment: fixed;
+}
+
+#section4::before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: #000000ba;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+#section4 h3 {
+    font-size: 16px;
+    font-family: 'Abel';
+    color: #A3957F;
+    margin-bottom: 3%;
+    letter-spacing: .51vw;
+    text-transform: uppercase;
+    opacity: 0.8;
+    padding: 0 5%;
+    position: relative;
+    z-index: 100;
+}
+
+#section4 .sec4__inner {
+    padding: 0 5%;
+    position: relative;
+    z-index: 100;
+}
+
+#section4 .sec4__inner .sec4__mask {
+    position: absolute;
+    font-size: 3.6vw;
+    color: #A3957F;
+    font-family: 'GmarketSans';
+    line-height: 1.4;
+    font-weight: 500;
+    padding-top: 8px;
+    opacity: 0;
+    margin-left: -5px;
+}
+
+#section4 .sec4__inner .sec4__text {
+    font-size: 3.6vw;
+    color: #A3957F;
+    font-family: 'GmarketSans';
+    line-height: 1.4;
+    font-weight: 700;
+    opacity: 1;
+    margin-left: -5px;
+}
+
+
+
+/* section5 */
+#section5 {
+    position: relative;
+    z-index: 1000;
+    background: #000;
+    height: 3000px;
+    padding: 10% 5%;
+}
+
+#section5 h3 {
+    font-size: 16px;
+    font-family: 'Abel';
+    color: #A3957F;
+    margin-bottom: 3%;
+    letter-spacing: .51vw;
+    text-transform: uppercase;
+    opacity: 0.8;
+}
+
+
+.sec5__inner {
+    color: #fff;
+    border-top: 1px solid #a3957f61;
+}
+
+
+.sec5__inner .work {
+    color: #A3957F;
+    border-bottom: 1px solid #a3957f61;
+    margin-bottom: 10px;
+    padding: 10%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.sec5__inner .work .left {
+    width: 60%;
+}
+
+.sec5__inner .work .left .work__mask {
+    display: none;
+}
+
+.sec5__inner .work .left .work__text {
+    font-size: 60px;
+    position: relative;
+}
+
+.sec5__inner .work .left .work__text::before {
+    content: '';
+    width: 4vw;
+    height: 4vw;
+    background-color: #73dc3b;
+    border-radius: 1500px 0;
+    position: absolute;
+    left: -3.5vw;
+    top: -2.5vw;
+}
+
+.sec5__inner .work .left .work__text::after {
+    content: '1';
+    position: absolute;
+    left: -3.5vw;
+    top: -2.5vw;
+    color: #ffffff;
+    font-family: 'GmarketSans';
+    font-size: 3vw;
+}
+
+.sec5__inner .work .left .work__text>div {
+    font-family: 'GmarketSans';
+    font-weight: 700;
+    line-height: 1.3;
+}
+
+.sec5__inner .work .left .work__info {
+    margin-top: 20px;
+}
+
+.sec5__inner .work .left .work__info a {
+    display: block;
+    font-family: 'Abel';
+}
+
+.sec5__inner .work .right {
+    width: 35%;
+    height: 500px;
+    background-color: #ccc;
+    background-image: url('https://images.unsplash.com/photo-1616400619175-5beda3a17896?q=80&w=3948&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-position: center;
+    background-size: cover;
 }
