--- a/권초록/assets/css/style3.css
+++ b/권초록/assets/css/style3.css
@@ -315,7 +315,6 @@
     position: relative;
     z-index: 1000;
     background: #000;
-    height: 3000px;
     padding: 10% 5%;
 }
 
@@ -401,4 +400,154 @@
     background-image: url('https://images.unsplash.com/photo-1616400619175-5beda3a17896?q=80&w=3948&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
     background-position: center;
     background-size: cover;
+}
+
+
+
+#section6 {
+    position: relative;
+    z-index: 1000;
+    background: #000000;
+    background-image: url('https://images.unsplash.com/photo-1682686581498-5e85c7228119?q=80&w=3870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    padding: 5%;
+    min-height: 100vh;
+}
+
+#section6::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: #000000ba;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.sec6__inner {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+
+.sec6__inner .sec6__text {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 100%;
+    z-index: 1000;
+    transform: translate(-50%, -50%);
+    font-family: 'GmarketSans';
+    font-weight: bold;
+    font-size: 7vw;
+    color: #A3957F;
+    text-transform: uppercase;
+    line-height: 1;
+    opacity: 1;
+}
+
+
+.sec6__inner .small {
+    font-size: 20px;
+    font-weight: 200;
+    margin-bottom: 1vw;
+    letter-spacing: 1vw;
+    font-family: "Abel";
+    text-transform: uppercase;
+    margin-top: 20px;
+}
+
+.sec6__inner .comment {
+    position: absolute;
+    left: 50%;
+    bottom: 10px;
+    z-index: 10000;
+    transform: translate(-50%, -50%);
+}
+
+.sec6__inner .comment input {
+    border: 1px solid #A3957F;
+    background: transparent;
+    padding: 5px 10px;
+    text-align: center;
+    color: #A3957F;
+    font-family: 'theJamsil';
+}
+
+.sec6__inner .comment .pass {
+    width: 100px;
+}
+
+.sec6__inner .comment button {
+    border: 1px solid #A3957F;
+    padding: 5px 20px;
+    background: transparent;
+    color: #A3957F;
+    vertical-align: -1px;
+}
+
+.sec6__inner .comment button:hover {
+    background-color: #A3957F;
+    color: #000;
+}
+
+.sec6__inner .comment input::placeholder {
+    color: #A3957F;
+}
+
+.sec6__inner .comment__view {
+    width: 100%;
+    height: 100%;
+    text-align: left;
+    padding: 20px;
+    position: relative;
+    z-index: 10000;
+    /* display: flex;
+    flex-direction: column; */
+}
+
+.sec6__inner .comment__view .view {
+    display: inline-block;
+    background-color: #00000074;
+    backdrop-filter: blur(10px);
+    color: #A3957F;
+    border: 1px solid #A3957F;
+    margin-bottom: 5px;
+    padding: 5px 10px;
+    font-family: 'theJamsil';
+
+}
+
+.sec6__inner .comment__view .view:hover {
+    background-color: #73dc3b;
+    border-color: #73dc3b;
+    color: #000;
+}
+
+.sec6__inner .comment__view .view span {
+    font-size: 12px;
+    opacity: 0.7;
+}
+
+.sec6__inner .comment__view .view span em {
+    font-size: 16px;
+    border: 1px solid #A3957F;
+    margin-left: 10px;
+    cursor: cell;
+    padding: 0 5px;
+}
+
+
+#section7 {
+    position: relative;
+    z-index: 10000;
+    height: 50vh;
+    background: #000;
+}
+
+#section8 {
+    height: 100vh;
 }
