--- a/이명훈/assets/css/style2.css
+++ b/이명훈/assets/css/style2.css
@@ -198,3 +198,175 @@
     transform: rotate(-45deg);
     fill: #000;
 }
+
+#section4 {
+    background-color: #000;
+    color: #fff;
+    height: 3000px;
+}
+
+#section4 h4 {
+    text-align: center;
+    font-family: 'PP Rader';
+    font-size: 4vw;
+    font-weight: 100;
+}
+
+.comment__wrap {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+    margin: 50px;
+}
+
+.comment__wrap .comment {
+    font-family: 'gowunBatang';
+    position: relative;
+    border: 1px solid #ffffff1e;
+    padding: 20px;
+    transition: all .2s;
+}
+
+.comment__wrap .comment .info {
+    border-top: 1px solid #ffffff1e;
+    padding-top: 10px;
+    margin-top: 10px;
+    color: #ffffff62
+}
+
+.comment__wrap .comment:hover {
+    background-color: #ffffff12;
+}
+
+.comment__wrap .comment.input input {
+    width: 100%;
+    background: transparent;
+    border: 1px solid #ffffff1e;
+    padding: 5px 10px;
+    margin-bottom: 5px;
+    color: #fff;
+    font-family: 'gowunBatang';
+}
+
+.comment__wrap .comment.input input::placeholder {
+    color: #ffffff62;
+
+}
+
+.comment__wrap .comment.input button {
+    background: transparent;
+    border: 1px solid #ffffff1e;
+    font-family: 'gowunBatang';
+    width: 100%;
+    padding: 5px 10px;
+    border-radius: 3px;
+    color: #fff;
+}
+
+
+#section3 {
+    padding: 50vh 0;
+    background-color: #000;
+}
+
+#section3 h4 {
+    text-align: center;
+    font-family: 'PP Rader';
+    font-size: 4vw;
+    font-weight: 100;
+    color: #fff;
+}
+
+
+.list__wrap {
+    background: #000;
+    margin: 50px;
+}
+
+.list__cate {
+    border: 1px solid #ffffff1e;
+    padding: 20px;
+    border-radius: 50px;
+    margin-bottom: 50px;
+}
+
+.list__cate span {
+    color: #fff;
+    border: 1px solid #ffffff1e;
+    display: inline-block;
+    padding: 8px 30px;
+    border-radius: 50px;
+    font-family: 'PP Rader';
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+.list__cate span.active {
+    background-color: #fff;
+    color: #000;
+}
+
+.list__cate span:hover {
+    background-color: #fff;
+    color: #000;
+}
+
+.list__item {
+    display: flex;
+    justify-content: space-between;
+}
+
+.list__item .item {
+    width: 49%;
+    min-height: 300px;
+    border: 1px solid #ffffff1e;
+    border-radius: 20px;
+}
+
+#section3 .list__item .item h4 {
+    text-align: left;
+    background-color: #fff;
+    color: #000;
+    padding: 10px 30px;
+    font-size: 30px;
+    font-family: 'gowunBatang';
+    border-radius: 20px 20px 0 0;
+}
+
+#section3 .list__item .item p {
+    color: #fff;
+    font-family: 'gowunBatang';
+    padding: 20px 30px;
+}
+
+#section3 .list__item .item ul {
+    color: #fff;
+    font-family: 'gowunBatang';
+    padding: 20px 30px;
+}
+
+#section3 .list__item .item ul li {
+    border-bottom: 1px solid #ffffff1e;
+    padding-bottom: 14px;
+    display: flex;
+    align-items: center;
+}
+
+#section3 .list__item .item ul li:last-child {
+    border: 0;
+}
+
+#section3 .list__item .item ul li span {
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+    background-image: url('https://blog.kakaocdn.net/dn/c5yaqz/btqXXVBqHvp/SEBAeKYrkouV6xZGcWDa9k/img.webp');
+    background-size: cover;
+    margin-right: 10px;
+    font-family: 'gowunBatang';
+
+}
+
+#section3 .list__item .item ul li:nth-of-type(2) span {
+    background-image: url('https://www.edigitalagency.com.au/wp-content/uploads/chatgpt-logo-white-green-background-png.png');
+}
